# In-Memory-KV-Store

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
include/: server.h  sharded_store.h  store.h
src/: main  main.cpp  server.cpp  sharded_store.cpp  store.cpp  store.h
tests/: store_test.cpp
